feat: add projects

--- a/index.html
+++ b/index.html
@@ -146,47 +146,47 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
 									<h3>Plan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p> In the planning phase, I determine the goals, requirements, and timelines for a project. They collaborate with stakeholders to ensure the project is aligned with business objectives.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-code"></span>
 									<h3>Code</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p> The code phase involves developing and writing the software code. I'll use version control systems to manage changes and ensure code quality.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Build</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>In the build phase, the software is compiled and packaged for deployment. This includes compiling the code, building binaries, and creating packages that can be deployed to different environments.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
 									<h3>Test</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>The test phase involves testing the software to ensure that it meets quality and performance standards. I'll use automated testing tools and techniques to identify and fix bugs.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
 									<h3>Release</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>The release phase involves making the software available for users. I'll use release management tools to automate the release process and ensure that the software is deployed correctly.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-deploydog"></span>
+									<span class="icon solid alt major fa-arrow-up"></span>
 									<h3>Deploy</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p> In the deploy phase, the software is deployed to the target environment. I'll use deployment automation tools to ensure that the software is deployed consistently and reliably.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-cog"></span>
 									<h3>Ops</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>The operate phase involves managing and maintaining the software in the production environment. I'll use monitoring and management tools to ensure that the software is performing well and to quickly identify and fix issues.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
 									<h3>Monitoring</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>The monitoring phase involves monitoring the software and infrastructure to ensure that it is performing as expected. I'll use monitoring tools to collect data on performance and usage and to identify issues that need to be addressed.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
 									<h3>Secure</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>The security phase involves ensuring that the software and infrastructure are secure. I'll use security tools and practices to identify and mitigate security risks and vulnerabilities.</p>
 								</section>
 							</div>
 						</div>
@@ -205,9 +205,9 @@
 							<h2>Let's stay connected ☎️</h2>
 							<p>Please don't hesitate to share any thoughts on your mind. I would be delighted to offer my assistance.</p>
 						</header>
-						<form method="post" action="#" class="cta">
+						<form method="post" action="mailto:test@gmail.com" class="cta" enctype="text/plain">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Message Me" /></div>
+								<div class="col-8 col-12-xsmall"><input type="text" name="message" id="message" placeholder="Message Me" /></div>
 								<div class="col-4 col-12-xsmall"><input type="submit" value="Send" class="fit primary" /></div>
 							</div>
 						</form>
