feat: add projects

--- a/index.html
+++ b/index.html
@@ -63,19 +63,25 @@
 					<div class="content">
 						<div class="container">
 							<div class="row">
-								<div class="col-4 col-12-xl">
+								<div class="container">
 									<header>
 										<h2>Keep Things Automated</h2>
 										My role is to keep your application app and running.</p>
 									</header>
 								</div>
-								<div class="col-4 col-12-xl">
-									<p>I am a highly motivated and goal-driven DevOps Engineer with 3+ years of experience managing large-scale production environments on public cloud providers such as GCP and AWS.
-										I have a core Linux OS understanding and proven experience with CI/CD pipelines for distributed production systems.
+								<div class="container">
+									<p>I am a highly motivated and goal-driven DevOps Engineer with 3+ years of experience managing large-scale production environments on public cloud providers such as GCP and AWS. 
+										<br>
+										<br>
+										I have a core Linux OS understanding and proven experience with CI/CD pipelines for distributed production systems. 
+										<br>
+										<br>
 										I am also experienced in monitoring and logging complicated environments and have excellent English skills. 
-										Additionally, I have worked with cutting-edge technologies such as Terraform, K8S, Helm-Charts, Grafana, GitOps, and scripting languages like Bash, Go, and Python.</p>
+										<br>
+										<br>
+										Additionally, I have worked with cutting-edge technologies such as Terraform, K8S, Helm-Charts, Grafana, GitOps, and scripting languages like Bash, Go, and Python.</p><br>
 								</div>
-								<div class="col-4 col-12-medium">
+								<div class="col-4 col-12-sm">
 									<span class="image fit main"><img src="images/main.png" alt="" /></span>
 									<!-- <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
 									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
