feat: add projects

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 							<p></p>
 						</header>
 						<p>
-							As an experienced professional, I have spent several years working in the field of [insert industry or profession], honing my skills and developing a deep understanding of the challenges and opportunities within the field. Over the course of my career, I have had the privilege of working on a diverse range of projects, collaborating with cross-functional teams, and driving successful outcomes for my organization. My experience has equipped me with a comprehensive set of technical and interpersonal skills, including [list specific technical and soft skills].</p>
-						<ul class="actions">
+							As an experienced professional, I have spent several years working in the field of the HealthCare industry , honing my skills and developing a deep understanding of the challenges and opportunities within the field. Over the course of my career, I have had the privilege of working on a diverse range of projects, collaborating with cross-functional teams, and driving successful outcomes for my organization. My experience has equipped me with a comprehensive set of technical and interpersonal skills.</p>
+							<ul class="actions">
 							<li><a href="#" class="button">Recommendations</a></li>
 						</ul>
 					</div>
