feat: add projects

--- a/bot-app.html
+++ b/bot-app.html
@@ -50,7 +50,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>E2E Bot-App</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>Bot Application for chat making desicion with video calls and payment system</p>
 						</header>
 
 						<!-- Content -->
