--- a/armor.html
+++ b/armor.html
@@ -20,13 +20,14 @@
 				<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
-								<li><a href="bot-app.html">E2E Bot-App</a></li>
-								<li><a href="zerotruat.html">IoT Zero Trust Connection</a></li>
-								<li><a href="armor.html">GCP Armor</a></li>
+								<li><a href="gke.html">POC | GKE Secured Cluster</a></li>
+								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
+								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
+								<li><a href="armor.html">POC | GCP Armor</a></li>
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -49,7 +50,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>GCP Armor</h2>
+							<h2>POC | GCP Armor (layer 7 of the OSI model)</h2>
 							<p>Google Cloud Armor with HTTP(S) Load Balancing and IAP </p>
 						</header>
 						<div class="row gtr-150">
