--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Osher's Portfolio Webapp
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Osher's Portfolio Webapp</title>
@@ -14,19 +9,19 @@
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
-
 			<!-- Header -->
 				<header id="header">
 					<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
 							<li>
 								<a href="#">Architecture Projects</a>
 								<ul>
-									<li><a href="bot-app.html">E2E Bot-App</a></li>
-									<li><a href="zerotruat.html">IoT Zero Trust Connection</a></li>
-									<li><a href="armor.html">GCP Armor</a></li>
+									<li><a href="gke.html">POC | GKE Secured Cluster</a></li>
+									<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
+									<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
+									<li><a href="armor.html">POC | GCP Armor</a></li>
 									<!-- <li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -43,7 +38,6 @@
 						</ul>
 					</nav>
 				</header>
-
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
@@ -56,7 +50,6 @@
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
-
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
 					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
@@ -83,18 +76,12 @@
 								</div>
 								<div class="col-4 col-12-sm">
 									<span class="image fit main"><img src="images/main.png" alt="" /></span>
-									<!-- <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p> -->
 								</div>
 							</div>
 						</div>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
-
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
 					<span class="image main"><img src="images/git.png" alt="" /></span>
