--- a/gke.html
+++ b/gke.html
@@ -20,11 +20,13 @@
 				<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
 				<nav id="nav">
 					<ul>
+						<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
 						<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
 								<li><a href="gke.html">POC | GKE Secured Cluster</a></li>
+								<li><a href="jenkins.html">POC | Jenkins On GKE </a></li>
 								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
 								<li><a href="armor.html">POC | GCP Armor</a></li>
