feat: add compaiancies

--- a/jenkins.html
+++ b/jenkins.html
@@ -19,11 +19,12 @@
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
+								<li><a href="secOps.html">DevSecOps</a></li>
 								<li><a href="gke.html">POC | GKE Secured Cluster</a></li>
-									<li><a href="jenkins.html">POC | Jenkins On GKE </a></li>
-									<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
-									<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
-									<li><a href="armor.html">POC | GCP Armor</a></li>
+								<li><a href="jenkins.html">POC | Jenkins On GKE </a></li>
+								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
+								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
+								<li><a href="armor.html">POC | GCP Armor</a></li>
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
