--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 							<li>
 								<a href="#">Architecture Projects</a>
 								<ul>
+									<li><a href="secOps.html">DevSecOps</a></li>
 									<li><a href="gke.html">POC | GKE Secured Cluster</a></li>
 									<li><a href="jenkins.html">POC | Jenkins On GKE </a></li>
 									<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
