feat: add compaiancies

--- a/gke.html
+++ b/gke.html
@@ -58,7 +58,7 @@
 						</header>
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/gke-Cluster.png" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/gke-Cluster.jpg" alt="" /></a>
 								<h3>Architecture</h3>
 									<p>Part 1: Building the infrastructure for the environment in Terraform is an efficient way to ensure consistency and repeatability across environments. Utilizing Terraform to deploy network infrastructure components such as Cloud Firewall, Kubernetes Engine, Secrets Manager, Cloud IAMs, Cloud Routes, Cloud Router, and VPC, creates a solid foundation for your Private GKE Cluster. Building two node pools for infra and services purposes is also a recommended best practice for managing resources effectively. </p>
 									<p>Part 2: Building the platform for the environment in Terraform provides an automated and streamlined approach for provisioning Cloud DNS, External IP for Load Balancing, Ingress Controller, Cloud Armor, Cloud SQL, Pub/Sub Messaging, and Cloud Scheduler. Deploying these dependencies as part of the platform setup ensures that the environment is configured for scalability and reliability. Utilizing Helm charts and a Helm repository can also streamline the deployment of your application and provide easy versioning and rollback capabilities.</p>
