--- a/index.html
+++ b/index.html
@@ -93,11 +93,7 @@
 							<h2>My Projects</h2>
 							<p></p>
 						</header>
-						<p>As a DevOps Engineer,
-							my GitHub portfolio demonstrates my proficiency in developing innovative projects that leverage cutting-edge technologies to improve software development workflows. 
-							I have developed several Kubernetes projects using Helm/Kustomize and Docker, as well as Docker-Compose and Swarm projects, and have designed GitHub Actions files for various use cases such as CI/CD and monitoring tools.
-							Additionally, I have experience working with multiple cloud providers and have developed Infrastructure-as-Code (IAC) projects using tools such as Terraform and CloudFormation.
-							My projects showcase my skills in creating highly scalable and reliable systems, implementing automation and monitoring solutions, and leveraging cloud technologies to drive business outcomes.</p>
+						<p>As a DevOps Engineer, my GitHub portfolio demonstrates my proficiency in developing innovative projects that leverage cutting-edge technologies to improve software development workflows. I have developed several Kubernetes projects using Helm/Kustomize and Docker, as well as Docker-Compose and Swarm projects, and have designed GitHub Actions files for various use cases such as CI/CD and monitoring tools. Additionally, I have experience working with multiple cloud providers and have developed Infrastructure-as-Code (IAC) projects using tools such as Terraform and CloudFormation. My projects showcase my skills in creating highly scalable and reliable systems, implementing automation and monitoring solutions, and leveraging cloud technologies to drive business outcomes.</p>
 						<ul class="actions">
 							<li><a href="https://github.com/osherlevi7" class="button">GitHub Page</a></li>
 						</ul>
