--- a/dlist/armor.html
+++ b/dlist/armor.html
@@ -9,19 +9,19 @@
 		<title>Osher's Portfolio Webapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
+				<h1 id="logo"><a href="../index.html">DevOshOps</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
-						<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
+						<li><a href="../images/OsherLevi-CV.pdf">CV</a></li>
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
@@ -31,6 +31,7 @@
 								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
 								<li><a href="armor.html">POC | GCP Armor</a></li>
+s
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -42,7 +43,8 @@
 								</li> -->
 							</ul>
 						</li>
-						<!-- <li><a href="elements.html">Elements</a></li> -->
+						<li><a href="../cism.html">CISM</a></li>
+						<!-- <li><a href="sism.html">SISM</a></li> -->
 						<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 					</ul>
 				</nav>
@@ -61,7 +63,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/armor.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="../images/armor.png" alt="" /></a>
 										<h3>Cloud Armor </h3>
 										<p>Cloud Armor is a security service provided by Google Cloud Platform (GCP) that helps protect websites and applications from DDoS attacks and other web-based threats. It is a managed service that provides both global load balancing and security policies for web applications hosted on GCP.</p>
 										<p>Cloud Armor uses a set of pre-configured security policies, called security rules, that are used to block malicious traffic and allow legitimate traffic. These security rules are based on IP addresses, geographic locations, and request patterns, and can be customized to meet the specific security requirements of a web application.</p>
@@ -113,7 +115,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/aws_armor.jpeg" alt="" /></a>
+											<a href="#" class="image fit"><img src="../images/aws_armor.jpeg" alt="" /></a>
 											<h3>Google Cloud Platform</h3>
 											<p>Google Cloud Armor helps protect your infrastructure and applications from Layer 3/Layer 4 network or protocol-based volumetric distributed denial-of-service (DDoS) attacks, volumetric Layer 7 attacks, and other targeted application attacks. It leverages Google's global network and distributed infrastructure to detect and absorb attacks and filter traffic through user-configurable security policies at the edge of Google's network, far upstream of your workloads.</p>
 											<footer>
@@ -147,14 +149,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
