--- a/dlist/jenkins.html
+++ b/dlist/jenkins.html
@@ -4,18 +4,18 @@
 		<title>Osher's Portfolio Webapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
+				<h1 id="logo"><a href="../index.html">DevOshOps</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
-						<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
+						<li><a href="../images/OsherLevi-CV.pdf">CV</a></li>
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
@@ -25,6 +25,7 @@
 								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
 								<li><a href="armor.html">POC | GCP Armor</a></li>
+
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -36,7 +37,8 @@
 								</li> -->
 							</ul>
 						</li>
-						<!-- <li><a href="elements.html">Elements</a></li> -->
+						<li><a href="../cism.html">CISM</a></li>
+						<!-- <li><a href="sism.html">SISM</a></li> -->
 						<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 					</ul>
 				</nav>
@@ -55,7 +57,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/jenkinsarchi.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="../images/jenkinsarchi.png" alt="" /></a>
 										<h3>Goal and Porpose of this project</h3>
 										<p>Automating the deployment of an application in a GKE private cluster using Jenkins CI/CD can be a time-consuming and manual process, involving tasks such as setting up infrastructure on GCP, creating jobs, building pipelines in Jenkins, and so on. In this blog, we'll explore how to streamline this process by automatically configuring Jenkins from a script file using Cloud Build, and deploying the application to a GKE private cluster.</p>
 										<h3>Key Components</h3>
@@ -94,7 +96,7 @@
 										</section>
 										<hr />
 										<section>
-                                            <a href="#" class="image fit"><img src="images/jenkinssss.png" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="../images/jenkinssss.png" alt="" /></a>
 											<h3>Jenkins</h3>
                                             <p>Jenkins is a popular open-source automation server used for continuous integration and continuous delivery (CI/CD) pipelines. When running Jenkins on Kubernetes, there are some best practices to follow to ensure that the environment is secure and reliable. </p>
 											<footer>
@@ -128,14 +130,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
