--- a/dlist/secOps.html
+++ b/dlist/secOps.html
@@ -9,27 +9,28 @@
 		<title>Osher's Portfolio Webapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
+					<h1 id="logo"><a href="../index.html">DevOshOps</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
-							<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
+							<li><a href="../images/OsherLevi-CV.pdf">CV</a></li>
 							<li>
 								<a href="#">Architecture Projects</a>
 								<ul>
                                     <li><a href="secOps.html">DevSecOps</a></li>
-                                    <li><a href="gke.html">POC | GKE Secured Cluster</a></li>
+									<li><a href="gke.html">POC | GKE Secured Cluster</a></li>
 									<li><a href="jenkins.html">POC | Jenkins On GKE </a></li>
 									<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 									<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
-									<li><a href="armor.html">POC | GCP Armor</a></li>
+									<li><a href="zerotruat.html">POC | GCP Armor</a></li>
+
 									<!-- <li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -41,7 +42,8 @@
 									</li> -->
 								</ul>
 							</li>
-							<!-- <li><a href="elements.html">Elements</a></li> -->
+							<li><a href="../cism.html">CISM</a></li>
+							<!-- <li><a href="sism.html">SISM</a></li> -->
 							<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
@@ -66,7 +68,7 @@
                                             <p>We also should use GCP and AWS compliance frameworks and tools, such as AWS Security Hub, AWS Config, GCP Security Command Center, and GCP Compliance Manager, to ensure ongoing compliance and monitoring.</p>
                                                 
 											<footer>
-                                                <a href="#" class="image fit"><img src="images/soc2.png" alt="" /></a>
+                                                <a href="#" class="image fit"><img src="../images/soc2.png" alt="" /></a>
 												<ul class="actions">
 													<li><a href="https://soc2.co.uk/" class="button">Learn More</a></li>
 												</ul>
@@ -79,7 +81,7 @@
 											<p>HIPAA-compliant DevOps pipeline on GCP, we can use Google Cloud's Security and Compliance tools like Cloud Data Loss Prevention (DLP), which helps you classify and protect sensitive data, and Cloud Identity-Aware Proxy (IAP), which provides secure access control for your resources. Additionally, we can use GCP's VPC and firewall rules to control access to your resources. we can also use Google Cloud's Container Registry and Kubernetes Engine to build and deploy containerized applications that meet HIPAA requirements.</p>
                                             <p>AWS HIPAA Compliance Program, which provides guidance on how to design and operate HIPAA-compliant workloads on AWS. Additionally, we can use AWS DLP and AWS Identity and Access Management (IAM) to classify and protect sensitive data and control access to your resources. we can also use AWS Elastic Container Service (ECS) and AWS Elastic Kubernetes Service (EKS) to build and deploy containerized applications that meet HIPAA requirements.</p>
 											<footer>
-                                                <a href="#" class="image fit"><img src="images/hipaa.jpg" alt="" /></a>
+                                                <a href="#" class="image fit"><img src="../images/hipaa.jpg" alt="" /></a>
 												<ul class="actions">
                                                     <li><a href="https://www.hhs.gov/hipaa/index.html" class="button">Learn More</a></li>
 												</ul>
@@ -91,7 +93,7 @@
 							<div class="col-8 col-12-medium imp-medium">
 								<!-- Content -->
                                 <section id="content">
-                                        <a href="#" class="image sm"><img src="images/zero-trust.jpg" alt="https://cloud.google.com/security/compliance/soc-2"/></a>
+                                        <a href="#" class="image sm"><img src="../images/zero-trust.jpg" alt="https://cloud.google.com/security/compliance/soc-2"/></a>
 										<h3>Zero-Trust In Everything</h3>
 										<p>Zero Trust is a security model that assumes that all devices, users, and resources are untrusted and should be verified and authenticated before access is granted.
                                             This project involves implementing a Zero Trust connection model for a multi-cloud environment, which means that all connections between devices, users, and resources must be secure and verified, even when outside the corporate network perimeter. </p>
@@ -106,7 +108,7 @@
                                     </footer>
                                     <hr />
                                     <section>
-                                        <a href="#" class="image sm"><img src="images/gdpr.png" alt=""/></a>
+                                        <a href="#" class="image sm"><img src="../images/gdpr.png" alt=""/></a>
                                         <h3>GDPR - General Data Protection Regulation</h3>
                                         <h5>European Union (EU) regulation that sets standards for protecting personal data of EU citizens. This project involves implementing GDPR compliance for a cloud-based application that collects and processes personal data from EU citizens.</h5>
                                         <p>
@@ -117,7 +119,7 @@
                                             <li>Implement incident response and breach notification processes to comply with GDPR requirements in case of a security incident.</li>
                                         </p>
                                         <footer>
-                                            <a href="#" class="image fit"><img src="images/.jpg" alt="" /></a>
+                                            <a href="#" class="image fit"><img src="../images/.jpg" alt="" /></a>
                                             <ul class="actions">
                                                 <li><a href="https://www.hhs.gov/hipaa/index.html" class="button">Learn More</a></li>
                                             </ul>
@@ -143,13 +145,13 @@
 			</footer>
 		</div>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 	</body>
 </html>
