--- a/dlist/zerotruat.html
+++ b/dlist/zerotruat.html
@@ -9,19 +9,19 @@
 		<title>Osher's Portfolio Webapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
+					<h1 id="logo"><a href="../index.html">DevOshOps</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
-							<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
+							<li><a href="../images/OsherLevi-CV.pdf">CV</a></li>
 							<li>
 								<a href="#">Architecture Projects</a>
 								<ul>
@@ -31,6 +31,7 @@
 									<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 									<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
 									<li><a href="armor.html">POC | GCP Armor</a></li>
+
 									<!-- <li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -42,8 +43,10 @@
 									</li> -->
 								</ul>
 							</li>
-							<!-- <li><a href="elements.html">Elements</a></li> -->
-							<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
+							<li><a href="../cism.html">CISM</a></li>
+							<!-- <li><a href="sism.html">SISM</a></li> -->
+							<!-- <li><a href="elements.html">Elements</a></li>
+							<li><a href="#" class="button primary">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -71,7 +74,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/aws_iot.png" alt="" /></a>
+											<a href="#" class="image fit"><img src="../images/aws_iot.png" alt="" /></a>
 											<h3>AWS</h3>
 											<p>Zero trust is a conceptual model and an associated set of mechanisms that provide security controls. These security controls do not depend solely on traditional network controls or network boundaries. It requires your users, devices, and systems to prove their trustworthiness, and it enforces fine-grained, identity-based rules that govern access to applications, data, and other assets.</p>
 											<footer>
@@ -87,7 +90,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/iot.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="../images/iot.png" alt="" /></a>
 										<h3>Key Components</h3>
 										<p>
 											The IoT Zero Trust Connection Architecture includes the following components: </br>
@@ -142,14 +145,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
