--- a/dlist/bot-app.html
+++ b/dlist/bot-app.html
@@ -9,19 +9,19 @@
 		<title>Osher's Portfolio Webapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
+				<h1 id="logo"><a href="../index.html">DevOshOps</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
-						<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
+						<li><a href="../images/OsherLevi-CV.pdf">CV</a></li>
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
@@ -31,6 +31,7 @@
 								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
 								<li><a href="armor.html">POC | GCP Armor</a></li>
+
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -42,7 +43,8 @@
 								</li> -->
 							</ul>
 						</li>
-						<!-- <li><a href="elements.html">Elements</a></li> -->
+						<li><a href="../cism.html">CISM</a></li>
+						<!-- <li><a href="sism.html">SISM</a></li> -->
 						<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 					</ul>
 				</nav>
@@ -59,7 +61,7 @@
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/bot-app.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="../images/bot-app.jpg" alt="" /></a>
 								<h3>Architecture</h3>
 								<p> This Bot-application is a comprehensive solution that includes a frontend and backend architecture built using React+Redux and Python+Django respectively.</p>
 								<p> It also integrates Redis for caching data, Twilio for remote video calling, a bot application for diagnosing user requests, and Stripe for managing subscriptions. The application is connected to a managed SQL instance with multiple databases and is deployed on a private GKE cluster using Terraform and Helm charts. Overall, Bot-application offers a range of features and functionalities to ensure a seamless and intuitive user experience.</p>
@@ -105,14 +107,14 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
