--- a/dlist/gke.html
+++ b/dlist/gke.html
@@ -9,19 +9,19 @@
 		<title>Osher's Portfolio Webapp</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 			<header id="header">
-				<h1 id="logo"><a href="index.html">DevOshOps</a></h1>
+				<h1 id="logo"><a href="../index.html">DevOshOps</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="https://www.linkedin.com/in/osher-levi-49794a1ab/">LinkedIn</a></li>
-						<li><a href="images/OsherLevi-CV.pdf">CV</a></li>
+						<li><a href="../images/OsherLevi-CV.pdf">CV</a></li>
 						<li>
 							<a href="#">Architecture Projects</a>
 							<ul>
@@ -30,7 +30,8 @@
 								<li><a href="jenkins.html">POC | Jenkins On GKE </a></li>
 								<li><a href="bot-app.html">POC | E2E Bot-App</a></li>
 								<li><a href="zerotruat.html">POC | IoT Zero Trust Connection</a></li>
-								<li><a href="armor.html">POC | GCP Armor</a></li>
+								<li><a href="zerotruat.html">POC | GCP Armor</a></li>
+
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -42,7 +43,8 @@
 								</li> -->
 							</ul>
 						</li>
-						<!-- <li><a href="elements.html">Elements</a></li> -->
+						<li><a href="../cism.html">CISM</a></li>
+						<!-- <li><a href="sism.html">SISM</a></li>x -->
 						<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 					</ul>
 				</nav>
@@ -58,7 +60,7 @@
 						</header>
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/gke-Cluster.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="../images/gke-Cluster.jpg" alt="" /></a>
 								<h3>Architecture</h3>
 									<p>Part 1: Building the infrastructure for the environment in Terraform is an efficient way to ensure consistency and repeatability across environments. Utilizing Terraform to deploy network infrastructure components such as Cloud Firewall, Kubernetes Engine, Secrets Manager, Cloud IAMs, Cloud Routes, Cloud Router, and VPC, creates a solid foundation for your Private GKE Cluster. Building two node pools for infra and services purposes is also a recommended best practice for managing resources effectively. </p>
 									<p>Part 2: Building the platform for the environment in Terraform provides an automated and streamlined approach for provisioning Cloud DNS, External IP for Load Balancing, Ingress Controller, Cloud Armor, Cloud SQL, Pub/Sub Messaging, and Cloud Scheduler. Deploying these dependencies as part of the platform setup ensures that the environment is configured for scalability and reliability. Utilizing Helm charts and a Helm repository can also streamline the deployment of your application and provide easy versioning and rollback capabilities.</p>
@@ -99,13 +101,13 @@
 			</footer>
 		</div>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/jquery.dropotron.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
 	</body>
 </html>
