--- a/elements.html
+++ b/elements.html
@@ -27,8 +27,8 @@
 								<a href="#">Layouts</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="armor.html">GCP Armor</a></li>
-									<li><a href="bot-app.html">E2E Bot-App</a></li>
+									<li><a href="dlist/armor.html">GCP Armor</a></li>
+									<li><a href="dlist/bot-app.html">E2E Bot-App</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
